# Scribe-lang

./: .gitignore  Cargo.toml  README.md  prd.md  scribe.toml  test_fn_call.scribe
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_integration.rs
codegen/: Cargo.toml
codegen/src/: lib.rs  llvm.rs
compiler/: Cargo.toml  README.md
compiler/src/: ast.rs  diagnostics.rs  error.rs  ir.rs  lexer.rs  lib.rs  lower.rs  parser.rs  resolver.rs  span.rs  typeck.rs
compiler/tests/: README.md  ir.rs  lexer.rs  lower.rs  parser.rs  typeck.rs
docs/: examples.md  language-spec.md  roadmap.md  syntax.md
examples/comparisons/: main.scribe  scribe.toml
examples/demo/: main.scribe  scribe.toml
examples/demo/src/: main.scribe
examples/demo/src/demo/math/: add.scribe
examples/hello-world/: main.scribe  scribe.toml
examples/loops/: main.scribe  scribe.toml
examples/records/: main.scribe  scribe.toml
examples/timer/: main.scribe  scribe.toml
examples/web-api/: main.scribe  scribe.toml
runtime/: Cargo.toml  README.md
runtime/src/: http.rs  io.rs  lib.rs  scheduler.rs  task.rs
std/: Cargo.toml  README.md
std/core/: README.md
std/file/: README.md
std/http/: README.md
std/json/: README.md
std/src/: lib.rs
std/text/: README.md
std/time/: README.md
