[package]
name = "scribe-cli"
version = "0.1.0"
edition = "2021"
authors = ["Scribe Authors <devs@scribe-lang.org>"]
license = "MIT"
description = "Command-line interface for the Scribe language"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
scribe-compiler = { path = "../compiler" }
scribe-runtime = { path = "../runtime" }
scribe-codegen = { path = "../codegen" }
scribe-std = { path = "../std" }

[dev-dependencies]
assert_cmd = "2.0"
